creacion excepciones y nuevos endpoints